# image-classification-questionnaire-server

./: .gitignore  .gitmodules  README.md  base14.py  daemon.sh  daemongo.sh  form_fsm.py  go.mod  go.sum  http.go  img_diff.py  index.html  index_quart.html  js.wy  post_all.py  predict.go  rename_image.py  requirements.txt  script.js  server.go  server.py  server_flask.py  server_linux.go  server_quart.py  server_win.go  style.css
base14/: CMakeLists.txt  __init__.py  base14.py
configo/: data.pb.go  data.proto
imago/: data.go  imgdiff.go  storage.go
imago/test/: test.go
img/: __init__.py  img_diff.py  storage.py
tools/: automata.py  base14.py  conf.pb  convert2webp.py  convert2webp_del.py  migrate.go  old2new.json  post_all.py  rename_image.py  shrink_webp.py
votego/: votedb.pb.go  votedb.proto
